# EV-LY

./: .gitignore  README.md  espnowMAC.py
base roulante/: main.py  motor.py
ecran/: CMakeLists.txt  lv_conf.h
ecran/lvgl/: CMakeLists.txt
ecran/lvgl/src/: lvgl.h
ecran/main/inc/: login_ui.h  mqtt_client.h
ecran/main/src/: login_ui.c  main.c  mqtt_client.c
manette/: main.py
screen/Draw/: Draw.ino  gfx_conf.h
screen/Main/: gfx_conf.h  main.ino
server/: init_db.js  mqttHandler.js  package-lock.json  package.json  server.js
server/data/: filieres.db
server/public/: admin.html  admin_gestion.html  dashboard.html  dashboard_cards.html  dashboard_list.html  domaine.html  ecole.html  filiere.html  index.html  login.html  specialite.html  styles-dark.css  styles.css
server1/: mqttHandler.js  package-lock.json  package.json  server.js  testlogin.js
server1/public/: admin.html  admin_gestion.html  ecole.html  styles.css
